macro/tests/ui/fail/01-missing-var.rs
use liquid_macro::seq;

seq!(N of 1..10 {
    // nothing
});

fn main() {}
